--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "ktr-chatbot",
   "private": true,
@@ -8,6 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
+  },
+  "engines": {
+    "node": "20.x"
   },
   "dependencies": {
     "@google/genai": "^0.14.0",
