--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,3 @@
-
 {
-  "rewrites": [
-    { "source": "/:path((?!.*\\.).*)", "destination": "/index.html" }
-  ]
+  "note": "This file is for Vercel deployments. For deploying on Render, please use the render.yaml file."
 }
