--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     # The build command for a Vite project
     buildCommand: npm install && npm run build
     # The directory where the built static files are located
-    staticPublishPath: ./build
+    staticPublishPath: ./dist
     envVars:
       # Render will ask for this value when setting up the service.
       # The key here MUST start with VITE_ to be exposed to the client by Vite.
